kubernetes/api.layer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-layer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-layer
  template:
    metadata:
      labels:
        app: api-layer
    spec:
      containers:
        - name: api-layer
          image: api-layer-image:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-layer-service
spec:
  selector:
    app: api-layer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
