kubernetes/query.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: query-service-image:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
