kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: project-domain.com
      http:
        paths:
          - path: /data
            pathType: Prefix
            backend:
              service:
                name: api-layer-service
                port:
                  number: 80
